# pumpkin-pi

./: .gitignore  GUIDE.md  LICENSE  README.md  README.quotients.md  deanonymizing-words.txt  find-deanonymizing-words.py  find-deanonymizing-words.sh  shell.nix
cubical/: equivalence_map_impls.agda
cubical/submission/: alternateFunExtDep.agda  equivalence_int_abs.agda  equivalence_queue.agda  grothendieck_int_equiv.agda
plugin/: LICENSE  Makefile.coq  Makefile.local  TODO.md  _CoqProject  build.sh  dune  dune-project  pumpkin-pi.opam  setoids.sh  test.sh  update_vernac.sed
plugin/coq/: #Reduce.v#  Apply.v  Construction.v  Desugar.v  DesugarModule.v  Example.v  HigherLift.v  Indtype.v  Induction.v  Infrastructure.v  Lift.v  NoSmartCache.v  Preprocess.v  PreprocessModule.v  Reduce.v  ShouldFail.v  SmartCache.v  Swap.v  Test.v  TestFindLift.v  TestLarge.v  TestLift.v  TestUnpack.v  Thoughts.v  ToSetoidTest.v  Translate.v  Tree.v  handshake.v  minimal_records.v  more_records.v  nonorn.v  nonorn2.v  prod_rect.v  val_vect.v
plugin/coq/examples/: Assumptions.v  Example.v  ExampleTactic.v  Intro.v  Lift.v  LiftSpec.v  ListToVect.v  ListToVectCustom.v  ListToVectUnpack.v  Projections.v  Search.v
plugin/coq/playground/: Anders.v  Notes.tex  add_constr.v  arbitrary.v  constr_extension.v  constr_refactor.v  defeq.v  elims.v  elims2.v  equivalence_construction.agda  equivalence_int_abs.agda  equivalence_map_impls.agda  equivalence_queue.agda  fin.v  flip.v  grothendieck_int_equiv.agda  grothendieck_int_equivalence.v  grothendieck_int_equivalence_repair_tool.v  index_uip.v  nonorn.v  refine_unit.v  sip.v  trivial.v  uip_index.v
plugin/coq/playground/TwoListQueue/: UIPList.v  diffing_queues.v  queue_equivalence.v  setoid_crazy_queue.v  setoid_equivalence.v  setoid_two_list_queue.v  setoid_two_list_queue_sigma.v  setoid_two_list_queue_sigma_simplified_proof_objects.v  single_element.v  single_list_queue.v  two_list_queue.v  two_list_queue_equivalence.v  two_list_queue_equivalence_repair_tool.v
plugin/eval/: Makefile  bintree.v  cast.v  lemmas.v  main.v  main2.v  maintemp.v  separate.sh  separateequiv.sh  times.sed  together.sh  togetherequiv.sh
plugin/eval/equiv4free/: Makefile  lemmas.v  list.v  main.v  main2.v  mainequiv.v  perm.v  prepermutes.sh  prepermutesequiv.sh
plugin/licensing/: LICENSE
plugin/src/: dune  frontend.ml  frontend.mli  modutils.ml  modutils.mli  options.ml  options.mli  ornamental.cmxs  ornamental.ml  ornamental.ml4  ornamental.mlg  ornamental.mlpack  ornaments.ml4  ornaments.mlpack
plugin/src/automation/: #equivalence.ml#  coherence.ml  coherence.mli  depelim.ml  depelim.mli  desugar.ml  desugar.mli  desugarprod.ml  dune  elim.ml  elim.mli  equivalence.ml  equivalence.mli  eta.ml  eta.mli  lift.ml  lift.mli  search.ml  search.mli  unpack.ml  unpack.mli
plugin/src/automation/lift/: dune  lift.ml  lift.mli  liftconfig.ml  liftconfig.mli  liftrules.ml  liftrules.mli
plugin/src/automation/search/: dune  equivalence.ml  equivalence.mli  search.ml  smartelim.ml  smartelim.mli  unpackalg.ml  unpackalg.mli
plugin/src/cache/: caching.ml  caching.mli  dune
plugin/src/components/: abstraction.ml  abstraction.mli  alignment.ml  differencing.ml  differencing.mli  dune  factoring.ml  factoring.mli  specialization.ml  specialization.mli  specialization2.ml  specialization2.mli
plugin/src/frontend/: dune  frontend.ml
plugin/src/lib/: coqterms.ml  coqterms.mli  debruijn.ml  debruijn.mli  deltautils.ml  deltautils.mli  desugarprod.ml  desugarprod.mli  differencing.ml  differencing.mli  dune  equivutils.ml  equivutils.mli  factoring.ml  factoring.mli  hofs.ml  hofs.mli  hypotheses.ml  hypotheses.mli  indexing.ml  indexing.mli  ornerrors.ml  ornerrors.mli  printing.ml  printing.mli  unificationutils.ml  unificationutils.mli  utilities.ml  utilities.mli  zooming.ml  zooming.mli
plugin/src/options/: dune
plugin/src/ornaments/: dune  lifting.ml  lifting.mli  promotion.ml  promotion.mli  promotions.ml  promotions.mli
plugin/src/ornaments/promotion/: dune
plugin/theories/: Adjoint.v  Eliminators.v  Equivalences.v  Lifted.v  Ornaments.v  Prod.v  Unpack.v  dune
