(library
 (name ornamental)
 (public_name pumpkin-pi.plugin)
 (synopsis "PUMPKIN Pi plugin for proof repair across type equivalences")
 (flags :standard -w -27 -warn-error -A)       ; CoqPP codes requires this
 (modules ("ornamental"))
 (library_flags -linkall)
 (libraries
   pumpkin-pi.promotion
   pumpkin-pi.cache
   pumpkin-pi.lib
   pumpkin-pi.ornaments
   pumpkin-pi.components
   pumpkin-pi.options
   pumpkin-pi.automation
   pumpkin-pi.lift
   pumpkin-pi.search_lib
   pumpkin-pi.frontend
   coq.vernac                      ; needed for vernac extend
))

(rule
 (targets ornamental.ml)
 (deps (:pp-file ornamental.ml4) )
 (action (bash "camlp5 pa_o.cmo pr_o.cmo pa_op.cmo pr_dump.cmo pa_extend.cmo q_MLast.cmo pa_macro.cmo %{lib:coq.grammar:grammar.cma} -loc loc -impl %{pp-file} -o %{targets}")))

(rule
  (targets pumpkinpi_full_plugin.cmxs)
  (action (run %{ocamlopt} -shared -linkall -o %{targets}
           %{lib:coq-plugin-lib.utilities:utilities.cmxa}
           %{lib:coq-plugin-lib.devutils:devutils.cmxa}           
           ;%{lib:coq-plugin-lib.termutils:termutils.cmxa}
           ;%{lib:coq-plugin-lib.inference:inference.cmxa}
           ;%{lib:coq-plugin-lib.representationutils:representationutils.cmxa}
           ;%{lib:coq-plugin-lib.state:state.cmxa}
           ;%{lib:coq-plugin-lib.envs:envs.cmxa}
           ;%{lib:coq-plugin-lib.typesandequality:typesandequality.cmxa}
           ;%{lib:coq-plugin-lib.hofs:hofs.cmxa}
           ;%{lib:coq-plugin-lib.debruijn:debruijn.cmxa}
           ;%{lib:coq-plugin-lib.constants:constants.cmxa}
           ;%{lib:coq-plugin-lib.hofimpls:hofimpls.cmxa}
           ;%{lib:coq-plugin-lib.inductive:inductive.cmxa}
           ;%{lib:coq-plugin-lib.contexts:contexts.cmxa}
           ;%{lib:coq-plugin-lib.transformation:transformation.cmxa}
           %{lib:coq-plugin-lib.decompiler:decompiler.cmxa}
           %{lib:pumpkin-pi.promotion:promotion.cmxa}
           %{lib:pumpkin-pi.cache:cache.cmxa}
           %{lib:pumpkin-pi.lib:lib.cmxa}
           %{lib:pumpkin-pi.ornaments:ornaments.cmxa}
           %{lib:pumpkin-pi.components:components.cmxa}
           %{lib:pumpkin-pi.options:options.cmxa}
           %{lib:pumpkin-pi.automation:automation.cmxa}
           %{lib:pumpkin-pi.lift:lift.cmxa}
           %{lib:pumpkin-pi.search_lib:search_lib.cmxa}
           %{lib:pumpkin-pi.frontend:frontend.cmxa}
           %{cmxa:ornamental})))

(install
  (section lib_root)
  (package pumpkin-pi)
  (files
    (pumpkinpi_full_plugin.cmxs as coq/user-contrib/pumpkinpi_full_plugin.cmxs)))

